[gd_scene load_steps=11 format=2]

[ext_resource path="res://game/board/board.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/heroes/hero.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/enemies/enemy_spawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/assets/user_interface/hero_health_bar.png" type="Texture" id=4]
[ext_resource path="res://game/game.gd" type="Script" id=6]
[ext_resource path="res://game/assets/user_interface/hero_health_bar_overlay.png" type="Texture" id=7]
[ext_resource path="res://game/assets/user_interface/hero_health_bar_underlay.png" type="Texture" id=8]
[ext_resource path="res://game/dice/dice_tray.tscn" type="PackedScene" id=11]
[ext_resource path="res://game/character_shop/character_shop.tscn" type="PackedScene" id=12]
[ext_resource path="res://game/dice_shop/dice_shop.tscn" type="PackedScene" id=13]

[node name="game" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 184.0, 88.0 ],
"_edit_lock_": true,
"_edit_vertical_guides_": [ 72.0, 408.0 ]
}

[node name="board" parent="." instance=ExtResource( 1 )]

[node name="hero_spawn_1" type="Node2D" parent="."]
position = Vector2( 168, 128 )

[node name="hero1" parent="hero_spawn_1" instance=ExtResource( 2 )]

[node name="hero_spawn_2" type="Node2D" parent="."]
position = Vector2( 168, 152 )

[node name="hero_spawn_3" type="Node2D" parent="."]
position = Vector2( 88, 128 )

[node name="hero_spawn_4" type="Node2D" parent="."]
position = Vector2( 88, 152 )

[node name="gold_amount" type="Label" parent="."]
margin_left = 214.0
margin_top = 15.0
margin_right = 268.0
margin_bottom = 29.0
text = "Gold: 16"
align = 1

[node name="button_start_adventure" type="Button" parent="."]
margin_left = 401.0
margin_top = 239.0
margin_right = 465.0
margin_bottom = 259.0
text = "Start"

[node name="button_ability_hurry" type="Button" parent="."]
margin_left = 32.0
margin_top = 236.0
margin_right = 140.0
margin_bottom = 256.0
toggle_mode = true
text = "Hurry the Fuck Up!"

[node name="button_shop" type="Button" parent="."]
margin_left = 32.0
margin_top = 236.0
margin_right = 96.0
margin_bottom = 256.0
text = "Shop"

[node name="timer_battle_tick" type="Timer" parent="."]

[node name="character_shop" parent="." instance=ExtResource( 12 )]
visible = false

[node name="dice_shop" parent="." instance=ExtResource( 13 )]
visible = false

[node name="enemy_spawner" parent="." instance=ExtResource( 3 )]
position = Vector2( 296, 128 )

[node name="enemy_spawner3" parent="." instance=ExtResource( 3 )]
position = Vector2( 376, 128 )

[node name="enemy_spawner4" parent="." instance=ExtResource( 3 )]
position = Vector2( 376, 152 )

[node name="enemy_spawner2" parent="." instance=ExtResource( 3 )]
position = Vector2( 296, 152 )

[node name="victory_dialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
window_title = "You Won!"

[node name="dice_tray" parent="." instance=ExtResource( 11 )]
visible = false
position = Vector2( 224, 96 )
z_index = -1

[node name="hero_health_bar" type="TextureProgress" parent="."]
margin_left = 80.0
margin_top = 96.0
margin_right = 208.0
margin_bottom = 112.0
value = 100.0
texture_under = ExtResource( 8 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 4 )
tint_over = Color( 0, 0, 0, 1 )
tint_progress = Color( 1, 0, 0, 1 )

[node name="hero_life_label" type="Label" parent="hero_health_bar"]
margin_left = 39.0
margin_top = 1.0
margin_right = 89.0
margin_bottom = 15.0
text = "100 / 100"
align = 1
valign = 1

[node name="health_label" type="Label" parent="hero_health_bar"]
margin_top = -13.0
margin_right = 60.0
text = "Heroes Health"

[node name="enemy_health_bar" type="TextureProgress" parent="."]
margin_left = 272.0
margin_top = 96.0
margin_right = 400.0
margin_bottom = 112.0
value = 100.0
texture_under = ExtResource( 8 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 4 )
tint_over = Color( 0, 0, 0, 1 )
tint_progress = Color( 0.133333, 0.443137, 0.211765, 1 )

[node name="enemy_life_label" type="Label" parent="enemy_health_bar"]
margin_left = 39.0
margin_top = 1.0
margin_right = 89.0
margin_bottom = 15.0
text = "100 / 100"
align = 1
valign = 1

[node name="health_label" type="Label" parent="enemy_health_bar"]
margin_left = 44.0
margin_top = -13.0
margin_right = 129.0
text = "Monsters Health"

[connection signal="entered_start_zone" from="board" to="." method="_on_board_entered_start_zone"]
[connection signal="final_zone_completed" from="board" to="." method="_on_board_final_zone_completed"]
[connection signal="new_zone_entered" from="board" to="." method="_on_board_new_zone_entered"]
[connection signal="pressed" from="button_start_adventure" to="." method="_on_button_start_adventure_pressed"]
[connection signal="pressed" from="button_ability_hurry" to="." method="_on_button_ability_hurry_pressed"]
[connection signal="pressed" from="button_shop" to="." method="_on_button_shop_pressed"]
[connection signal="timeout" from="timer_battle_tick" to="." method="_on_timer_battle_tick_timeout"]
[connection signal="purchased_dice" from="character_shop" to="." method="_on_character_shop_purchased_dice"]
[connection signal="purchased_hero" from="character_shop" to="." method="_on_character_shop_purchased_hero"]
[connection signal="upgraded_dice" from="dice_shop" to="." method="_on_dice_shop_upgraded_dice"]
